--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
             <artifactId>google-collect</artifactId>
             <version>snapshot-20080530</version>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
         <dependency>
             <groupId>org.apache.commons</groupId>
