--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <description>Complex project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -227,6 +228,21 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${org.mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>me.chanjar</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>me.chanjar</groupId>
+            <artifactId>weixin-java-common</artifactId>
+            <version>1.3.3</version>
         </dependency>
     </dependencies>
     <build>
