--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -7,11 +7,13 @@ spring:
     nacos:
       #######nacos 注册中心 配置#######
       discovery:
-        server-addr: 20.10.110.78:8848
+        enabled: false
+        server-addr: 127.0.0.1:8848
       #######nacos 配置中心 配置#######
       #配置dataId对应${spring.application.name}-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
       #未设置值则为空，优先寻找complex-dev.yaml，没有配置则寻找complex.yaml
       config:
+        enabled: false
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         # 命名空间：默认public
         namespace: 2ce12bc6-f96f-4449-95c3-00daffa31adf
